--- a/client/src/componets/Login/Login.module.css
+++ b/client/src/componets/Login/Login.module.css
@@ -1,7 +1,7 @@
 .wrapper { 
     min-height: 100dvh;
     background-size: cover; 
-    background-image: url(https://img.freepik.com/free-photo/luxury-hotel-reception-hall-lounge-restaurant-with-high-ceiling_105762-1771.jpg?t=st=1743622848~exp=1743626448~hmac=d5a9c0c7a9b7faf1813416cd258ec898451a5d2119683bc127b7357f45939aff&w=1380);
+    background-image: url('../../assets/bg.jpg');
   }
   
   .form {
